--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </figure>
             </div>
 
-            <h2>Here's a time line of Dr. Borlaug's life:</h2>
+            <h3>Here's a time line of Dr. Borlaug's life:</h3>
 
 
             <div class="timeline_section">
@@ -42,10 +42,14 @@
                     <li><strong>1984</strong> - becomes a distinguished professor at Texas A&M University</li>
                     <li><strong>2005</strong> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
                     <li><strong>2009</strong> - dies at the age of 95.</li>
-                </ul>
+                </ul>    
+            </div>
+
+            <div class="after_timeline">
                 <p><i>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</i></p>
                 <p><i>-- Indian Prime Minister Manmohan Singh</i></p>
             </div>
+
             <p><strong>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry</a></strong></p>
         </div>
     </div>
